crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__w292_4.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
W292_4.py:1:2: W292 (missing-newline-at-end-of-file) [*] No newline at end of file
  |
1 |  
  |  ^ W292 (missing-newline-at-end-of-file)
  |
  = help: Add trailing newline

ℹ Safe fix
1   |- 
  1 |+
